--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.304",
     "react-typing-effect": "^2.0.5",
     "tailwindcss": "^4.1.11",
