--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.304",
+    "react-toastify": "^11.0.5",
     "react-typing-effect": "^2.0.5",
     "tailwindcss": "^4.1.11",
     "typewriter-effect": "^2.22.0"
